--- a/POCMeetApp/app/src/main/res/layout/activity_search.xml
+++ b/POCMeetApp/app/src/main/res/layout/activity_search.xml
@@ -10,40 +10,54 @@
 
     tools:context="com.epam.pocmeetapp.activities.SearchActivity">
 
-    <LinearLayout
+
+    <Spinner
+        android:id="@+id/spinnerSearchCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/edittextSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:hint="@string/search" />
 
-        <EditText
-            android:layout_width="0dp"
-            android:id="@+id/edittextSearch"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/search" />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonSearch"
-            android:layout_weight="0.5"
-            android:hint="@string/search" />
-    </LinearLayout>
-    <LinearLayout
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date from:"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/buttonDateFrom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="Date from" />
 
-        <DatePicker
-            android:layout_width="0dp"
-            android:id="@+id/datePickerFrom"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/search" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date to:"
+        android:textSize="20sp" />
 
+    <Button
+        android:id="@+id/buttonDateTo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date to" />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/buttonSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"
+        android:hint="@string/search" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listViewSearch"/>
 
 
 </LinearLayout>
